Bug 151968 - Squiggly lines cover misspelled Arabic words
Summary: Squiggly lines cover misspelled Arabic words
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Khaled Hosny
URL:
Whiteboard: target:7.6.0 target:7.5.2 target:7.5.5
Keywords:
: 153175 (view as bug list)
Depends on:
Blocks: Spell-Checking RTL
  Show dependency treegraph
 
Reported: 2022-11-09 02:05 UTC by AvidSeeker
Modified: 2024-08-04 22:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
squiggly lines (11.62 KB, image/png)
2022-12-03 02:34 UTC, Hossein
Details

Note You need to log in before you can comment on or make changes to this bug.
Description AvidSeeker 2022-11-09 02:05:21 UTC
1. Enable Complex Text Layout. Set to Arabic.
2. Install Arabic spell checker (e.g: Ayaspell).
3. Squiggly lines cover Arabic words.

The following screenshot shows comparison between Arabic and English text at 12pt with 3 different Arabic fonts (from Google fonts).

https://i.imgur.com/pCTnn13.png
Comment 1 stragu 2022-11-10 11:12:04 UTC
Confirmed in:

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0cf5141b2233611286a27930d8030c562eb0d84b
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 2 Hossein 2022-12-03 02:34:38 UTC
Created attachment 183967 [details]
squiggly lines

Adding the example image as an attachment
Comment 3 Khaled Hosny 2023-01-24 06:42:27 UTC
*** Bug 153175 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2023-02-22 21:10:46 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5899b27e71430e490c2d3a6b87ae52c10f383ba7

tdf#151968: Fix vertical position of RTL spelling wavy line

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-02-24 09:12:31 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/6327fdc149edab1eedabe5b0d4dde6bcf08a113e

tdf#151968: Fix vertical position of RTL spelling wavy line

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Khaled Hosny 2023-06-08 13:26:54 UTC
This fix caused bug 155001, so I’m reverting it while working on a better fix.
Comment 7 Commit Notification 2023-06-10 13:53:06 UTC
خالد حسني committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/b78330e8a627f049016aa0a2de354855231bd32a

Revert "tdf#151968: Fix vertical position of RTL spelling wavy line"

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-06-10 13:54:09 UTC
خالد حسني committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/c026addda09086f04eca26b6da6ea72085cec518

Revert "tdf#151968: Fix vertical position of RTL spelling wavy line"

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-06-10 15:15:20 UTC
خالد حسني committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4ceac7d67d3f3e09dc3f4a03b330d779e6a71e4c

Revert "tdf#151968: Fix vertical position of RTL spelling wavy line"

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-06-10 16:40:32 UTC
خالد حسني committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/254ea7e592aca39a55205bb91cc255f4aba4d7c9

Revert "Revert "tdf#151968: Fix vertical position of RTL spelling wavy line""

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2023-06-10 17:05:39 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/74b6c5ea3c333de7c5e7ef8636732edadd9083f2

tdf#151968: Fix vertical position of RTL spelling wavy line

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2023-06-10 17:05:42 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/8b36ce6b5b976911a41875bdf9ca09b03eca8f1e

tdf#151968: Fix vertical position of RTL spelling wavy line

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2023-06-12 09:51:57 UTC
خالد حسني committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/d9468821bc275ef3a816752aadcd3b4535453a19

Revert "tdf#151968: Fix vertical position of RTL spelling wavy line"

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2023-06-23 20:53:26 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/04f4aaa36eab4cb7299e567d59b6e5de5c4f5bf6

tdf#151968: Fix vertical position of RTL spelling wavy line

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Hossein 2023-06-26 00:17:00 UTC
@Khaled:
The commit 74b6c5ea3c333de7c5e7ef8636732edadd9083f2 has caused tdf#156050 regression. Please take a look.